# caculator-stack

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  expression.cpp  expression.h  main.cpp  main.qml  midlayer.cpp  midlayer.h
test/: CMakeLists.txt  test.cpp
